--- a/index.html
+++ b/index.html
@@ -3,28 +3,44 @@
   <head>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v$npm_package_version/dist/aframe-physics-system.min.js"></script>
-    <script src="/my-app.js"></script>
+    <script src="/my-app.js"></script>    
   </head>
   <body>
-    <a-scene physics="debug: true">
+    <a-scene>
+
       <!-- ASSETS -->
       <a-assets>
         <a-asset-item id="garden" src="/garden/scene.gltf"></a-asset-item>
         <a-assets-item id="sky" src="/sky/scene.gltf"></a-assets-item>
       </a-assets>
 
+      <!-- LUZ -->
+      <a-entity id="sunlight-3" light="distance: 5; intensity: 5" position="0 8 0"></a-entity>
+
       <!-- Piso sólido -->
       <a-plane static-body position="0 -0.1 0" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane>
 
-      <a-entity gltf-model="#garden" light="type: ambient;" static-body></a-entity>
+      <!-- JARDIN -->
+      <a-entity gltf-model="#garden" static-body></a-entity>
 
-      <!-- Esfera con gravedad -->
-      <a-sphere color="#004DFF" radius="0.5" position="8 2 10" dynamic-body></a-sphere>
+      <!-- Objetos -->
+      <a-sphere material="color:#AA0000; roughness:0.1;" radius="0.5" position="8 2 10"  envent-set__enter="_event: mouseenter; material.color: #FF0000"></a-sphere>
+      <!-- <a-box material="color:#004DFF; roughness:0.1;" radius="0.5" position="10 2 10" dynamic-body ></a-box> -->
 
       <!-- Cielo independiente sin interacción con la gravedad -->
       <a-sky src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg"></a-sky>
 
-      <a-camera position="8 1.2 12" rotation="0 0 0"></a-camera>
+
+      <!-- PRUEBAS -->
+      <!-- PRUEBAS -->
+      <!-- PRUEBAS -->
+      <a-entity id="ocean" position="0 2 0" ocean="density: 20; width: 50; depth: 50; speed: 4"
+                material="color: #9CE3F9; opacity: 0.75; metalness: 0; roughness: 1"
+                rotation="-90 0 0"></a-entity>
+
+      <a-camera position="8 1.2 12" rotation="0 0 0">
+        <!-- <a-cursor></a-cursor> -->
+      </a-camera>
     </a-scene>
   </body>
 </html>
