--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v$npm_package_version/dist/aframe-physics-system.min.js"></script>
-    <script src="/my-app.js"></script>    
+    <script src="/my-app.js"></script>   
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.0.0/dist/aframe-extras.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@^4.0.0/dist/aframe-event-set-component.min.js"></script> <!--EVENT SET COMPONENT INCLUDE MOUSEENTER,MOUSELEAVE,CLICK MORE
+    DETALIS OF THIS SCRIPT SOURCE ON https://www.youtube.com/watch?v=RsA5a-gDk4c&list=PL8MkBHej75fJD-HveDzm4xKrciC5VfYuV&index=18 -->
+
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script> <!-- DON MCCURDY SCRIPT SORUCE FOR GRAVITY LETS SEE IF ITS WORKS 10/10/2023-->
+    <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.min.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene physics="gravity: -9.8" renderer="antialias: true" restitution="0.5" >
 
       <!-- ASSETS -->
       <a-assets>
@@ -18,13 +24,20 @@
       <a-entity id="sunlight-3" light="distance: 5; intensity: 5" position="0 8 0"></a-entity>
 
       <!-- Piso sólido -->
-      <a-plane static-body position="0 -0.1 0" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane>
+      <!-- <a-plane static-body position="0 -0.1 0" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane> -->
 
       <!-- JARDIN -->
       <a-entity gltf-model="#garden" static-body></a-entity>
 
       <!-- Objetos -->
-      <a-sphere material="color:#AA0000; roughness:0.1;" radius="0.5" position="8 2 10"  envent-set__enter="_event: mouseenter; material.color: #FF0000"></a-sphere>
+    <a-sphere material="color:#AA0000; roughness:0.1;" radius="0.5" position="8 2 10"
+      event-set__enter="_event: mouseenter; material.color:#FF0000;"
+      event-set__leave="_event: mouseleave; material.color:#AF00AA;"
+      event-set__tarcol="_event: click; material.color:#00AAFF;" 
+        dynamic-body="linearDamping:0.5;
+                      angularDamping:0.3"
+                      grabbable>
+    </a-sphere>
       <!-- <a-box material="color:#004DFF; roughness:0.1;" radius="0.5" position="10 2 10" dynamic-body ></a-box> -->
 
       <!-- Cielo independiente sin interacción con la gravedad -->
@@ -34,13 +47,18 @@
       <!-- PRUEBAS -->
       <!-- PRUEBAS -->
       <!-- PRUEBAS -->
-      <a-entity id="ocean" position="0 2 0" ocean="density: 20; width: 50; depth: 50; speed: 4"
-                material="color: #9CE3F9; opacity: 0.75; metalness: 0; roughness: 1"
-                rotation="-90 0 0"></a-entity>
+      <a-entity id="ocean" position="-2 -0.2 -1"  ocean="density: 20; width: 5; depth: 10; speed: 2"
+                material="color: #1d334a ; opacity: 0.75; metalness: 0; roughness: 1"
+                rotation="-90 0 -45"></a-entity>
 
-      <a-camera position="8 1.2 12" rotation="0 0 0">
-        <!-- <a-cursor></a-cursor> -->
+      <a-camera position="8 1.6 12" rotation="0 0 0">
       </a-camera>
+      <a-entity progressive-controls position="8 1.6 12"></a-entity>
+
     </a-scene>
+            <!-- <a-entity cursor position="0 0 -1"
+                  geometry="primitive: sphere; radius: 0.005"
+                  material="color: #000000; shader: flat; opacity:0.5">
+        </a-entity> -->
   </body>
 </html>
